vonixcore-template-fabric-1.20.1/build_final.txt

> Configure project :
Fabric Loom: 1.9.2

> Task :compileJava
C:\Users\rwcoo\Developement\VonixCore\vonixcore-template-fabric-1.20.1\src\main\java\network\vonix\vonixcore\VonixCore.java:125: error: cannot find symbol
            if (environment.dedicated || !environment.integrated) {
                           ^
  symbol:   variable dedicated
  location: variable environment of type CommandSelection
C:\Users\rwcoo\Developement\VonixCore\vonixcore-template-fabric-1.20.1\src\main\java\network\vonix\vonixcore\VonixCore.java:125: error: cannot find symbol
            if (environment.dedicated || !environment.integrated) {
                                                     ^
  symbol:   variable integrated
  location: variable environment of type CommandSelection
Note: C:\Users\rwcoo\Developement\VonixCore\vonixcore-template-fabric-1.20.1\src\main\java\network\vonix\vonixcore\teleport\TeleportManager.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///C:/Users/rwcoo/Developement/VonixCore/vonixcore-template-fabric-1.20.1/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  Note: C:\Users\rwcoo\Developement\VonixCore\vonixcore-template-fabric-1.20.1\src\main\java\network\vonix\vonixcore\teleport\TeleportManager.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  C:\Users\rwcoo\Developement\VonixCore\vonixcore-template-fabric-1.20.1\src\main\java\network\vonix\vonixcore\VonixCore.java:125: error: cannot find symbol
              if (environment.dedicated || !environment.integrated) {
                             ^
    symbol:   variable dedicated
    location: variable environment of type CommandSelection
  C:\Users\rwcoo\Developement\VonixCore\vonixcore-template-fabric-1.20.1\src\main\java\network\vonix\vonixcore\VonixCore.java:125: error: cannot find symbol
              if (environment.dedicated || !environment.integrated) {
                                                       ^
    symbol:   variable integrated
    location: variable environment of type CommandSelection
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 5s
1 actionable task: 1 executed
